--- a/DATN_F21/src/main/resources/templates/viewsSeller/sent.html
+++ b/DATN_F21/src/main/resources/templates/viewsSeller/sent.html
@@ -3,28 +3,35 @@
 	th:replace="~{/layoutSeller/index :: dynamic(~{:: main})}">
 <body>
 <main>
-	<div class="xacnhan">
-	<h3 style="text-align: center; color: orange; margin-top: 20px">Đơn Hàng Đã Giao</h3>
+	<div class="xacnhan" style="text-align: center;">
+	<label class="title3" style="color: orange; margin-top: 20px; font-size: 30px">Đơn Hàng Đã Giao</label>
+            
             <div class="bang2">
                 <table class="table tablea">
                     <thead class="thead-light">
                         <tr>
-                            <th class="id">Mã đơn hàng</th>
+                            <th class="id">Id đơn hàng</th>
+                            <th class="sanpham">Ngày đặt hàng</th>
+                            <th class="sanpham">Người mua</th>
                             <th class="tongtien">Tổng tiền</th>
-                            <th class="sanpham">Chiết khấu</th>
-                            <th class="thao-tac">Thành tiền</th>
-                            <th class="sanpham">
-                            	Xem chi tiết
-                            </th>
+                            <th class="tongtien">Địa chỉ</th>
+                            <th class="thao-tac"></th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td scope="row">1</td>
-                            <td>265.000</td>
-                            <td>5%</td>
-                            <td>255.000</td>
-                            <td><a th:href="@{|/viewsSeller/detail|}">Chi tiết</a></td>
+
+                        <tr ng-repeat="detail in Order.OrderFather">
+                            <td scope="row">{{detail.id}}</td>
+                            <td>{{detail.bookingdate}}</td>
+                            <td>{{detail.user.fullname}}</td>
+                            <td>{{detail.totalamount | number : 2}}</td>
+                            <td>{{detail.address.address}}</td>
+                            <td>
+                              <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+                                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+                                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+                                </svg></a>
+                            </td>                            
                         </tr>
                     </tbody>
                 </table>
