--- a/DATN_F21/src/main/resources/templates/layoutSeller/_menu.html
+++ b/DATN_F21/src/main/resources/templates/layoutSeller/_menu.html
@@ -20,7 +20,28 @@
 					</li>
 				</ul>
 				<ul class="nav-right">
-
+					<li ng-if="Order.SumOrderStatusOne > 1" class="header-notification">
+						<a href="#!">
+						  <i class="ti-bell"></i>
+						  <span class="badge bg-c-pink"></span>
+						</a>
+						<ul class="show-notification">
+						  <li>
+							<h6>Thông báo</h6>
+							<label class="label label-danger">New</label>
+						  </li>
+						  <li>
+							<div class="media">
+							  <h6>
+								bạn hiện có {{Order.SumOrderStatusOne}} đơn chưa xác nhận
+							  </h6>
+							  <label class="label label-danger"
+								><a th:href="@{|/viewsSeller/wait|}">Xem</a></label
+							  >
+							</div>
+						  </li>
+						</ul>
+					  </li>
 					<li class="user-profile header-notification"><a href="#!">
 							<img src="assets/images/avatar-4.jpg" class="img-radius"
 							alt="User-Profile-Image"> <span>John Doe</span>
