--- a/DATN_F21/src/main/resources/templates/layoutSeller/index.html
+++ b/DATN_F21/src/main/resources/templates/layoutSeller/index.html
@@ -3,7 +3,7 @@
 	th:fragment="dynamic(main)">
 
 <head>
-<title>GURU Able - Free Lite Admin Template</title>
+<title>Seller</title>
 <!-- HTML5 Shim and Respond.js IE9 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
