--- a/DATN_F21/src/main/resources/templates/layoutSeller/list.html
+++ b/DATN_F21/src/main/resources/templates/layoutSeller/list.html
@@ -17,13 +17,11 @@
 					<ul class="pcoded-submenu">
 						<li class=" "><a  th:href="@{|/viewsSeller/allProduct|}"> <span
 								class="pcoded-micon"><i class="ti-angle-right"></i></span> <span
-								class="pcoded-mtext" data-i18n="nav.basic-components.alert">Tất
-									cả sản phẩm</span> <span class="pcoded-mcaret"></span>
+								class="pcoded-mtext" data-i18n="nav.basic-components.alert">Quản lý sản phẩm</span> <span class="pcoded-mcaret"></span>
 						</a></li>
 						<li class=" "><a th:href="@{|/viewsSeller/createProduct|}"> <span
 								class="pcoded-micon"><i class="ti-angle-right"></i></span> <span
-								class="pcoded-mtext" data-i18n="nav.basic-components.breadcrumbs">Thêm - sửa
-									sản phẩm</span> <span class="pcoded-mcaret"></span>
+								class="pcoded-mtext" data-i18n="nav.basic-components.breadcrumbs">Quản lý hình ảnh sản phẩm</span> <span class="pcoded-mcaret"></span>
 						</a></li>
 
 					</ul></li>
@@ -45,6 +43,12 @@
 								data-i18n="nav.basic-components.breadcrumbs">Đơn hàng đã
 									giao</span> <span class="pcoded-mcaret"></span>
 						</a></li>
+						<li class=" "><a th:href="@{|/viewsSeller/confirmed|}"> <span
+							class="pcoded-micon"><i class="ti-angle-right"></i></span> <span
+							class="pcoded-mtext"
+							data-i18n="nav.basic-components.breadcrumbs">Đơn hàng đã
+								xác nhận</span> <span class="pcoded-mcaret"></span>
+					</a></li>
 						<li class=" "><a th:href="@{|/viewsSeller/cancel|}"> <span
 								class="pcoded-micon"><i class="ti-angle-right"></i></span> <span
 								class="pcoded-mtext"
