--- a/DATN_F21/src/main/resources/templates/viewsSeller/statisCate.html
+++ b/DATN_F21/src/main/resources/templates/viewsSeller/statisCate.html
@@ -7,76 +7,54 @@
         <div class="title2">
             <h3 style="text-align: center; color: orange; margin-top: 20px">Thống Kê Doanh Thu Theo Loại</h3>
         </div>
-        <div class="search3">
-            <div class="row">
-                <div class="col-sm-6">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <label class="form-label ten">Từ</label>
-                            <input class="form-control">
-                        </div>
-                        <div class="col-sm-4">
-                            <label class="form-label ten">Đến</label>
-                            <input class="form-control" >
-                        </div>
-                        <div class="col-sm-4 btn_tim">
-                            <button class="btn btn-outline-success" style="margin-top: 30px">Search</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
+        
+         <form action="/Seller/statisCate" method="get">
+            <div class="search3">
                 <div class="row">
-                    <div class="tong col-sm-6">
-                        <label class="form-label ten">Tổng tiền</label>
-                        <input class="form-control">
+                    <div class="col-sm-6">
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <label class="form-label ten">Từ</label>
+                                <input class="form-control" type="date" name="date1">
+                            </div>
+                            <div class="col-sm-4">
+                                <label class="form-label ten">Đến</label>
+                                <input class="form-control" type="date" name="date2">
+                            </div>
+                            <div class="col-sm-4 btn_tim">
+                                <button class="btn btn-outline-success" style="margin-top: 30px" type="submit">Search</button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="chon-loai col-sm-6">
-						<label class="form-label ten">Loai</label>
-                        <select class="custom-select" style="margin-left: 0px; width: 350px; margin-top: 0px">
-                            <option class="phan_loai" selected>Open this select menu</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                        </select>
-                    </div>
-                    </div>
-                </div>
+                    <!-- <div class="col-sm-6">
+                    
+                </div> -->
             </div>
-        </div>
+            </div>
+        </form>
         <hr>
         <div class="bang3">
             <table class="table">
                 <thead class="thead-light">
                     <tr>
-                        <th scope="col">Mã Hóa Đơn</th>
-                        <th scope="col">Tổng đơn</th>
-                        <th scope="col">Chiết Khấu</th>
-                        <th scope="col">Thành Tiền</th>
+                        <th scope="col">Hình</th>
+                        <th scope="col">Tên Loại</th>
+                        <th scope="col">Số lượng</th>
+                        <th scope="col">Tổng tiền</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody th:each="n:${ngay}">
                     <tr>
-                        <td>1020</td>
-                        <td>50.000</td>
-                        <td>5%</td>
-                        <td>47.500</td>
-                    </tr>
-                    <tr>
-                        <td>1220</td>
-                        <td>45.000</td>
-                        <td>5%</td>
-                        <td>1.800</td>
-                    </tr>
-                    <tr>
-                        <td>1320</td>
-                        <td>45.000</td>
-                        <td>5%</td>
-                        <td>1.800</td>
+                        <td></td>
+                        <td>[[${n.namecate}]]</td>
+                        <td>[[${n.sumquantity}]]</td>
+                        <td>[[${#numbers.formatInteger(n.total, 2,'POINT')}]]đ</td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
+    <!-- <img th:src="@{"> -->
 </main>
 </body>
 </html>
