--- a/DATN_F21/src/main/resources/templates/viewsUser/cart.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/cart.html
@@ -130,7 +130,7 @@
 									</tbody>
 								</table>
 							</div>
-							<div class="shoping-cart-total mt-50">
+							<!-- <div class="shoping-cart-total mt-50">
 								<h4>Tổng sản phẩm thanh toán</h4>
 								<table class="table">
 									<tbody>
@@ -147,12 +147,12 @@
 											<td><strong>$633.00</strong></td>
 										</tr>
 									</tbody>
-								</table>
+								</table></div> -->
 								<div class="btn-wrapper text-right">
 									<a href="/index/checkout" class="theme-btn-1 btn btn-effect-1">Tiến hành thanh
 										toán</a>
 								</div>
-							</div>
+							
 						</div>
 					</div>
 				</div>
