--- a/DATN_F21/src/main/resources/templates/layoutSeller/index.html
+++ b/DATN_F21/src/main/resources/templates/layoutSeller/index.html
@@ -3,14 +3,7 @@
 	th:fragment="dynamic(main)">
 
 <head>
-<title>GURU Able - Free Lite Admin Template</title>
-<!-- HTML5 Shim and Respond.js IE9 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-      <![endif]-->
-<!-- Meta -->
+<title>CoolOrganic - Organic Food Web</title>
 <meta charset="utf-8">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
@@ -19,8 +12,9 @@
 <meta name="keywords"
 	content=" Admin , Responsive, Landing, Bootstrap, App, Template, Mobile, iOS, Android, apple, creative app">
 <meta name="author" content="CodedThemes">
+
 <!-- Favicon icon -->
-<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/img/faviconlogo.ico" type="image/x-icon" />
 <!-- Google font-->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600"
 	rel="stylesheet">
