--- a/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
@@ -12,8 +12,9 @@
 					<div class="col-lg-4">
                         <div class="ltn__main-menu" style="margin-top: -50px;">
                             <ul>
-                                <li class="menu-icon"><a href="/formAd">Admin</a></li>
-                                <li><a href="/formSeller">Seller</a></li>
+                                <li class="menu-icon"><a href="/formAd">Admin</a></li>  
+								<!-- th:if="${#request.isUserInRole('DIRE') or #request.isUserInRole('STAF')}" -->
+                                <li ><a href="/regisSeller">Seller</a></li>
 								<li th:if="${#request.remoteUser}"><a href="" style="color: white;"><i class="icon-user"></i> [[${#request.remoteUser}]]</a></li>
                             	<li th:if="${#request.remoteUser}"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
 									<path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
@@ -48,9 +49,9 @@
 					</div>
 					<div class="col">
 						<form id="#" method="get" action="/search" class="mt-30">
-							<input class="input-find" type="text" name="name"
+							<input class="input-find" type="text" name="name" style="border-radius: 5px;"
 								required="required" placeholder="Tìm kiếm sản phẩm...">
-							<button class="theme-btn-1 btn-find" type="submit">
+							<button class="theme-btn-1 btn-find" type="submit" style="border-radius: 5px;">
 								<i class="icon-search"></i>
 							</button>
 						</form>
@@ -58,18 +59,18 @@
 					<div class="ltn__header-options ltn__header-options-2">
 						<div class="ltn__drop-menu user-menu">
 							<ul>
-								<li><a href="#"><i class="icon-user"></i></a>
+								<li><a  style="border-radius: 5px;" href="#"><i class="icon-user"></i></a>
 									<ul>
-										<li><a href="/security/login/form">Đăng nhập</a></li>
-										<li><a href="/register">Đăng ký</a></li>
-										<li><a href="/account/information">Tài khoản</a></li>
+										<li th:if="${#request.remoteUser == null}"><a href="/security/login/form">Đăng nhập</a></li>
+										<li th:if="${#request.remoteUser == null}"><a href="/register">Đăng ký</a></li>
+										<li th:if="${#request.remoteUser}"><a href="/account/information">Tài khoản</a></li>
 									</ul></li>
 							</ul>
 						</div>
 						<!-- mini-cart -->
 						<div class="mini-cart-icon">
-							<a th:href="@{|/index/cart|}"> <i class="icon-shopping-cart"></i>
-								<sup>{{cart.sumquantity}}</sup>
+							<a  style="border-radius: 5px;" th:href="@{|/index/cart|}"> <i class="icon-shopping-cart"></i>
+								<sup>{{cart.count}}</sup> 
 							</a>
 						</div>
 						<!-- mini-cart -->
