--- a/DATN_F21/src/main/resources/static/css/seller.css
+++ b/DATN_F21/src/main/resources/static/css/seller.css
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 /* menu */
-
+.error {
+  color: red;
+}
   .logo {
     max-width: 100%;
     height: 60px;
@@ -220,7 +222,7 @@
 }
 
 .button {
-  margin-left: 220px;
+  /* margin-left: 220px; */
   margin-top: 30px;
 }
 
@@ -420,6 +422,7 @@
 body {
   font-family: Helvetica;
   -webkit-font-smoothing: antialiased;
+  /* background: rgba( 71, 147, 227, 1); */
 }
 
 h3 {
@@ -435,8 +438,8 @@ h3 {
 /* Table Styles */
 
 .table-wrapper {
-  margin: 10px 70px 70px;
-  /* margin: 10px 50px 50px; */
+  /* margin: 10px 70px 70px; */
+  margin: 10px 50px 50px;
   box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2);
 }
 
@@ -511,7 +514,7 @@ h3 {
   }
   .fl-table td,
   .fl-table th {
-      padding: 20px .625em .625em .625em;
+      padding: 10px .625em .625em .625em;
       height: 60px;
       vertical-align: middle;
       box-sizing: border-box;
@@ -545,4 +548,237 @@ h3 {
       display: block;
       text-align: center;
   }
+}
+
+
+/* input file */
+
+
+/* You can remove these code below*/
+
+:root {
+  --primary: #08aeea;
+  --secondary: #13D2B8;
+  --purple: #bd93f9;
+  --pink: #ff6bcb;
+  --blue: #8be9fd;
+  --gray: #333;
+  --font: "Poppins", sans-serif;
+  --gradient: linear-gradient(40deg, #ff6ec4, #7873f5);
+  --shadow: 0 0 15px 0 rgba(0, 0, 0, 0.05);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+input,
+button,
+textarea {
+  border: 0;
+  outline: none;
+}
+
+
+/* Main code */
+
+.input-file {
+  margin: 0 auto;
+  width: 100%;
+  height: 15rem;
+  position: relative;
+}
+
+.input-label {
+  border-radius: 8px;
+  border: 1px dotted #eee;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  cursor: pointer;
+}
+
+.input-file input[type="file"] {
+  display: none;
+}
+
+.input-file .icon-upload {
+  color: #ccc;
+  font-size: 3rem;
+  pointer-events: none;
+}
+
+
+/* radio */
+
+
+/* You can remove these code below*/
+
+:root {
+  --primary: #08aeea;
+  --secondary: #13D2B8;
+  --purple: #bd93f9;
+  --pink: #ff6bcb;
+  --blue: #8be9fd;
+  --gray: #333;
+  --font: "Poppins", sans-serif;
+  --gradient: linear-gradient(40deg, #ff6ec4, #7873f5);
+  --shadow: 0 0 15px 0 rgba(0, 0, 0, 0.05);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
+/* input,
+button,
+textarea {
+  border: 0;
+  outline: none;
+} */
+
+
+/* Main code */
+
+.radio-input {
+  display: none;
+}
+
+.radio-label {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 2rem;
+  background-color: #eee;
+  display: inline-block;
+  cursor: pointer;
+  margin: 0 1rem;
+  box-shadow: 0 0 0 4px #eee;
+  transition: all 0.25s linear;
+}
+
+.radio-input:checked+.radio-label {
+  box-shadow: 0 0 0 4px #fff, 0 0 0 6px #fd656b;
+  background-color: #fd656b;
+}
+
+
+/* searchbox */
+
+
+/* You can remove these code below*/
+
+:root {
+  --primary: #08aeea;
+  --secondary: #13D2B8;
+  --purple: #bd93f9;
+  --pink: #ff6bcb;
+  --blue: #8be9fd;
+  --gray: #333;
+  --font: "Poppins", sans-serif;
+  --gradient: linear-gradient(40deg, #ff6ec4, #7873f5);
+  --shadow: 0 0 15px 0 rgba(0, 0, 0, 0.05);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+input,
+button,
+textarea {
+  border: 0;
+  outline: none;
+}
+
+
+/* Main code */
+
+.simple-search {
+  width: 100%;
+  display: flex;
+}
+
+.simple-search button {
+  padding: 15px;
+  color: white;
+  flex-shrink: 0;
+  border-radius: 8px;
+  background-color: #fc8383;
+  margin-left: 15px;
+}
+
+.simple-search input {
+  width: 100%;
+  padding: 15px;
+  background-color: #fafafa;
+  border-radius: 8px;
+  -webkit-appearance: none;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+
+/* Title */
+
+
+/* You can remove these code below*/
+
+:root {
+  --primary: #08aeea;
+  --secondary: #13D2B8;
+  --purple: #bd93f9;
+  --pink: #ff6bcb;
+  --blue: #8be9fd;
+  --gray: #333;
+  --font: "Poppins", sans-serif;
+  --gradient: linear-gradient(40deg, #ff6ec4, #7873f5);
+  --shadow: 0 0 15px 0 rgba(0, 0, 0, 0.05);
+}
+
+
+/* * {
+  box-sizing: border-box;
+} */
+
+
+/* input,
+button,
+textarea {
+  border: 0;
+  outline: none;
+} */
+
+
+/* Main code */
+
+.line-text {
+  text-align: center;
+  position: relative;
+}
+
+.line-text:before {
+  content: "";
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  background-color: var(--gray);
+}
+
+.line-text span {
+  display: inline-block;
+  background-color: white;
+  position: relative;
+  z-index: 2;
+  padding: 1rem;
+  font-weight: 600;
 }
