--- a/DATN_F21/src/main/resources/templates/layoutSeller/index.html
+++ b/DATN_F21/src/main/resources/templates/layoutSeller/index.html
@@ -51,6 +51,9 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
 
+	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+
 </head>
 
 <body  ng-app="seller-app" ng-controller="seller-ctrl">
