--- a/DATN_F21/src/main/resources/templates/viewsUser/login.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/login.html
@@ -30,12 +30,12 @@
 								</div>
 								<div class="btn-wrapper mt-10">
 									<a href="/oauth2/authorization/facebook" class="theme-btn-3 btn btn-block" type="submit" title="Facebook">				
-										<i class="fab fa-facebook"></i> Facebook
+										<img src="/img/icons/icon-img/fb.png" height="25px" width="25px" alt="404"> Facebook
 									</a>
 								</div>
 								<div class="btn-wrapper mt-10">
 									<a href="/oauth2/authorization/google" class="theme-btn-3 btn btn-block" type="submit">
-										<i class="fab fa-google-plus"></i> Google +
+										<img src="/img/icons/icon-img/gg.png" height="25px" width="25px" alt="404"> Google +
 									</a>
 								</div>
 								<div class="go-to-btn mt-20">
