--- a/DATN_F21/src/main/resources/templates/viewsUser/product-detail.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/product-detail.html
@@ -10,7 +10,7 @@
                     <div class="col-lg-12">
                         <div class="ltn__breadcrumb-inner ltn__breadcrumb-inner-2 justify-content-between">
                             <div class="section-title-area ltn__section-title-2">
-                                <h6 class="section-subtitle ltn__secondary-color">Chào mừng bạn đến với shop của chúng tôi</h6>
+                                <h6 class="section-subtitle ltn__secondary-color">Chào mừng bạn đến với shop [(${item.store.name})]</h6>
                                 <h1 class="section-title white-color">Chi tiết sản phẩm</h1>
                             </div>
                             <div class="ltn__breadcrumb-list">
@@ -92,6 +92,13 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div style="margin-top: 10px; margin: 10px;">
+                                    <h3 class="section-title">
+                                        <span>THÔNG TIN VỀ SHOP</span>
+                                    </h3>
+                                    <h4>SHOP [(${item.store.name})]</h4>
+                                    <h5>[(${item.store.description})]</h5>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -119,7 +126,7 @@
                                 <a th:href="@{|/index/product-detail/${sp.id}|}"><img th:src="@{|/assets/images/${sp.images}|}" alt="#"></a>
                                 <div class="product-badge">
                                     <ul>
-                                        <li class="sale-badge">New</li>
+                                        <li class="sale-badge">[(${sp.status ? 'Còn hàng' : 'Hết hàng'})]</li>
                                     </ul>
                                 </div>
                                 <div class="product-hover-action">
