--- a/DATN_F21/src/main/resources/templates/viewsSeller/allProduct.html
+++ b/DATN_F21/src/main/resources/templates/viewsSeller/allProduct.html
@@ -225,13 +225,13 @@
 							</select>
                                             </div>
                                         </div>
-                                        <div class="form-group row">
+                                        <!-- <div class="form-group row">
                                             <label class="col-sm-3 col-form-label">Create Date</label>
                                             <div class="col-sm-9">
                                                 <input type="date" name="createdate" ng-required="true" ng-model="form.createdate" class="form-control">
                                                 <span class="error" ng-show="qlsp.createdate.$error.required">Không bỏ trống ngày tạo sản phẩm</span>
                                             </div>
-                                        </div>
+                                        </div> -->
 
                                         <div class="form-group row">
                                             <label class="col-sm-3 col-form-label ">Mô tả</label>
